--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <h3>projects</h3>
         <p>from the oldest to the newest :</p>
         <ul>
-            <li><a>todo list</a></li>
+            <li><a href="https://ilouwebsites.github.io/todo-list/">todo list</a></li>
         </ul>
     </body>
 </html>
